--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 </head>
 
 <body>
-    <!-- 頭部區域 -->
-    <div class="header">
-        <div class="background"></div>
+    <div class="main">
+        <!-- 頭部區域 -->
+        <div class="header">
+            <div class="background"></div>
             <div class="container">
                 <!-- logo -->
                 <div class="logo">
@@ -26,7 +27,7 @@
                 <!-- 搜尋 -->
                 <div class="search">
                     <form action="#">
-                        <input type="text" placeholder="吃點什麼呢～？" >
+                        <input type="text" placeholder="吃點什麼呢～？">
                     </form>
 
                     <div class="line"></div>
@@ -39,128 +40,129 @@
                     <button type="button" class="login"><a href="#">登入</a></button>
                     <button type="button" class="signup"><a href="#">註冊</a></button>
                 </div>
-        </div>
-    </div>
-
-    <!-- banner區域 -->
-    <div class="banner">
-        <!-- left -->
-        <div class="left">
-            <ul>
-                <li><a href="#"><img src="./uploads/banner1.jpg" alt=""></a></img></li>
-                <li><a href="#"><img src="./uploads/banner3.jpg" alt=""></a></img></li>
-                <li><a href="#"><img src="./uploads/banner4.jpg" alt=""></a></img></li>
-            </ul>
+            </div>
         </div>
 
-        <!-- center -->
-        <div class="center">
-            <ul>
-                <li><a href="#"><img src="./uploads/banner3.jpg" alt=""></a></img></li>
-                <li><a href="#"><img src="./uploads/banner4.jpg" alt=""></a></img></li>
-                <li><a href="#"><img src="./uploads/banner1.jpg" alt=""></a></img></li>
-            </ul>
-        </div>
 
-        <!-- right -->
-        <div class="right">
-            <ul>
-                <li><a href="#"><img src="./uploads/banner4.jpg" alt=""></a></img></li>
-                <li><a href="#"><img src="./uploads/banner1.jpg" alt=""></a></img></li>
-                <li><a href="#"><img src="./uploads/banner3.jpg" alt=""></a></img></li>
-            </ul>
-        </div>
-    </div>
-
-    <!-- divid -->
-    <div class="divid"></div>
-
-    <!-- 飲料推薦區 -->
-    <div class="drink wrapper">
-        <!-- 標題 -->
-        <div class="title">
+        <!-- banner區域 -->
+        <div class="banner">
+            <!-- left -->
             <div class="left">
-                <h3>想喝？</h3>
-                <p>附近熱門店家推薦</p>
+                <ul>
+                    <li><a href="#"><img src="./uploads/banner1.jpg" alt=""></a></img></li>
+                    <li><a href="#"><img src="./uploads/banner3.jpg" alt=""></a></img></li>
+                    <li><a href="#"><img src="./uploads/banner4.jpg" alt=""></a></img></li>
+                </ul>
             </div>
+
+            <!-- center -->
+            <div class="center">
+                <ul>
+                    <li><a href="#"><img src="./uploads/banner3.jpg" alt=""></a></img></li>
+                    <li><a href="#"><img src="./uploads/banner4.jpg" alt=""></a></img></li>
+                    <li><a href="#"><img src="./uploads/banner1.jpg" alt=""></a></img></li>
+                </ul>
+            </div>
+
+            <!-- right -->
             <div class="right">
-                <a href="#" class="more">查看更多<span class="iconfont material-icons-outlined">
-                        chevron_right
-                    </span></a>
+                <ul>
+                    <li><a href="#"><img src="./uploads/banner4.jpg" alt=""></a></img></li>
+                    <li><a href="#"><img src="./uploads/banner1.jpg" alt=""></a></img></li>
+                    <li><a href="#"><img src="./uploads/banner3.jpg" alt=""></a></img></li>
+                </ul>
             </div>
         </div>
-        <!-- 內容 -->
-        <div class="content">
-            <ul>
-                <li>
-                    <a href="#">
-                        <div class="pic"><img src="./uploads/drink1.jpg" alt=""></div>
-                        <div class="txt">
-                            <div class="shopinfo">
-                                <h4>50嵐</h4>
-                                <strong>免運</strong>
-                            </div>
-                            <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
-                                    near_me
-                                </i><u>3km</u></p>
-                        </div>
-                    </a>
-                    <div class="cover">
+
+        <!-- divid -->
+        <div class="divid"></div>
+
+        <!-- 飲料推薦區 -->
+        <div class="drink wrapper">
+            <!-- 標題 -->
+            <div class="title">
+                <div class="left">
+                    <h3>想喝？</h3>
+                    <p>附近熱門店家推薦</p>
+                </div>
+                <div class="right">
+                    <a href="#" class="more">查看更多<span class="iconfont material-icons-outlined">
+                            chevron_right
+                        </span></a>
+                </div>
+            </div>
+            <!-- 內容 -->
+            <div class="content">
+                <ul>
+                    <li>
                         <a href="#">
-                            <p>外送門檻</p>
-                            <p>2公里以內200元</p>
-                            <p>3公里以內300元</p>
-                            <p>4公里以內400元</p>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <a href="#">
-                        <div class="pic"><img src="./uploads/drink2.jpg" alt=""></div>
-                        <div class="txt">
-                            <div class="shopinfo">
-                                <h4>鮮茶道</h4>
-                                <strong>免運</strong>
+                            <div class="pic"><img src="./uploads/drink1.jpg" alt=""></div>
+                            <div class="txt">
+                                <div class="shopinfo">
+                                    <h4>50嵐</h4>
+                                    <strong>免運</strong>
+                                </div>
+                                <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
+                                        near_me
+                                    </i><u>3km</u></p>
                             </div>
-                            <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
-                                    near_me
-                                </i><u>3km</u></p>
-                        </div>
-                    </a>
-                    <div class="cover">
-                        <a href="#">
-                            <p>外送門檻</p>
-                            <p>2公里以內200元</p>
-                            <p>3公里以內300元</p>
-                            <p>4公里以內400元</p>
                         </a>
-                    </div>
-                </li>
-                <li>
-                    <a href="#">
-                        <div class="pic"><img src="./uploads/drink3.jpg" alt=""></div>
-                        <div class="txt">
-                            <div class="shopinfo">
-                                <h4>COMEBUY</h4>
-                                <strong>免運</strong>
+                        <div class="cover">
+                            <a href="#">
+                                <p>外送門檻</p>
+                                <p>2公里以內200元</p>
+                                <p>3公里以內300元</p>
+                                <p>4公里以內400元</p>
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="pic"><img src="./uploads/drink2.jpg" alt=""></div>
+                            <div class="txt">
+                                <div class="shopinfo">
+                                    <h4>鮮茶道</h4>
+                                    <strong>免運</strong>
+                                </div>
+                                <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
+                                        near_me
+                                    </i><u>3km</u></p>
                             </div>
-                            <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
-                                    near_me
-                                </i><u>3km</u></p>
-                        </div>
-                    </a>
-                    <div class="cover">
-                        <a href="#">
-                            <p>外送門檻</p>
-                            <p>2公里以內200元</p>
-                            <p>3公里以內300元</p>
-                            <p>4公里以內400元</p>
                         </a>
-                    </div>
-                </li>
-            </ul>
+                        <div class="cover">
+                            <a href="#">
+                                <p>外送門檻</p>
+                                <p>2公里以內200元</p>
+                                <p>3公里以內300元</p>
+                                <p>4公里以內400元</p>
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="pic"><img src="./uploads/drink3.jpg" alt=""></div>
+                            <div class="txt">
+                                <div class="shopinfo">
+                                    <h4>COMEBUY</h4>
+                                    <strong>免運</strong>
+                                </div>
+                                <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
+                                        near_me
+                                    </i><u>3km</u></p>
+                            </div>
+                        </a>
+                        <div class="cover">
+                            <a href="#">
+                                <p>外送門檻</p>
+                                <p>2公里以內200元</p>
+                                <p>3公里以內300元</p>
+                                <p>4公里以內400元</p>
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
         <!-- 食物推薦區 -->
         <div class="drink wrapper">
             <!-- 標題 -->
@@ -247,6 +249,7 @@
                 </ul>
             </div>
         </div>
+    </div>
     <div class="footer">
         <div class="companyinfo wrapper">
             <div class="left">
