新增animation.css檔、更改搜索欄及按鈕大小

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/basic.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/animation.css">
 </head>
 
 <body>
@@ -37,8 +38,8 @@
                 </div>
                 <!-- 登入註冊區 -->
                 <div class="log_sign">
-                    <button type="button" class="login"><a href="#">登入</a></button>
-                    <button type="button" class="signup"><a href="#">註冊</a></button>
+                    <a href="#"> <button type="button" class="login">登入</button></a>
+                    <a href="#"></a><button type="button" class="signup">註冊</button></a>
                 </div>
             </div>
         </div>
