menu頁面初步布局

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>噹菜</title>
+    <!-- SEO:搜尋引擎優化技巧：使用meta name="description"、meta name="keywords" title文字-->
+    <meta name="description" content="噹菜是一款新創的點餐平台。">
+    <meta name="keywords" content="噹菜,點餐,訂餐,飲料,餐廳,美食">
+    <title>噹菜Tiám-Tshài</title>
+    <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
