更改首頁的橘色分區版樣式

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
 
         <!-- divid -->
-        <div class="divid"></div>
+        <div class="divid wrapper"></div>
 
         <!-- 飲料推薦區 -->
         <div class="drink wrapper">
