--- a/shopcart.html
+++ b/shopcart.html
@@ -113,11 +113,28 @@
                             <p class="trash"><i class="bi-trash3"></i></p>
                         </div>
                     </li>
+                    
 
                 </ul>
             </div>
             <div class="right">
-                <div class="userinfo"></div>
+                <div class="userinfo">
+                    <p class="name">姓　名：<span>王大明</span></p>
+                    <p class="phone">電　話：<span>0912345678</span></p>
+                    <p class="address">地　址：<span>桃園市楊梅區幼獅路二段3號</span></p>
+                    <p class="code">折扣碼：</p>
+                </div>
+                <div class="checkout">
+                    <p>小計： $<span>900</span> </p>
+                    <p>折扣： $<span>15</span> </p>
+                    <p>運費： $<span>50</span> </p>
+                    <div class="total">
+                        <p>總計：$<span>935</span></p>                        
+                        <button>送出訂單</button>
+                    </div>
+                    
+
+                </div>
                 <div class="amount"></div>
             </div>
 
