--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <meta name="keywords" content="噹菜,點餐,訂餐,飲料,餐廳,美食">
     <title>噹菜Tiám-Tshài</title>
     <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <link rel="stylesheet" href="./css/basic.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/animation.css">
+    
 </head>
 
 <body>
@@ -27,7 +26,7 @@
             <div class="container">
                 <!-- logo -->
                 <div class="logo">
-                    <h1><a href="./index.html">噹菜 TIAM-TSHAI</a></h1>
+                    <h1><a href="./index.html" onclick="return false">噹菜 TIAM-TSHAI</a></h1>
                 </div>
                 <!-- 搜尋 -->
                 <div class="search">
@@ -67,6 +66,13 @@
                     <li><a href="#"><img src="./uploads/banner4.jpg" alt=""></a></img></li>
                     <li><a href="#"><img src="./uploads/banner1.jpg" alt=""></a></img></li>
                 </ul>
+
+                <!-- 圓點指示器 -->
+                <ol>
+                    <li class="current"><i></i></li>
+                    <li><i></i></li>
+                    <li><i></i></li>
+                </ol>
             </div>
 
             <!-- right -->
@@ -100,6 +106,28 @@
             <div class="content">
                 <ul>
                     <li>
+                        <a href="./menu001.html">
+                            <div class="pic"><img src="./uploads/drink2.jpg" alt=""></div>
+                            <div class="txt">
+                                <div class="shopinfo">
+                                    <h4>鮮茶道</h4>
+                                    <strong>免運</strong>
+                                </div>
+                                <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
+                                        near_me
+                                    </i><u>3km</u></p>
+                            </div>
+                        </a>
+                        <div class="cover">
+                            <a href="#">
+                                <p>外送門檻</p>
+                                <p>2公里以內200元</p>
+                                <p>3公里以內300元</p>
+                                <p>4公里以內400元</p>
+                            </a>
+                        </div>
+                    </li>
+                    <li>
                         <a href="#">
                             <div class="pic"><img src="./uploads/drink1.jpg" alt=""></div>
                             <div class="txt">
@@ -123,10 +151,10 @@
                     </li>
                     <li>
                         <a href="#">
-                            <div class="pic"><img src="./uploads/drink2.jpg" alt=""></div>
+                            <div class="pic"><img src="./uploads/drink3.jpg" alt=""></div>
                             <div class="txt">
                                 <div class="shopinfo">
-                                    <h4>鮮茶道</h4>
+                                    <h4>COMEBUY</h4>
                                     <strong>免運</strong>
                                 </div>
                                 <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
@@ -251,6 +279,7 @@
                             </a>
                         </div>
                     </li>
+                    
                 </ul>
             </div>
         </div>
