--- a/menu001.html
+++ b/menu001.html
@@ -43,9 +43,9 @@
                 </div>
                 <!-- 使用者功能區 -->
                 <div class="user_function">
-                    <i class="bi-cart3"></i>
-                    <i class="bi-bell"></i>
-                    <i class="bi-list"></i>
+                    <a href="./shopcart.html"> <i class="bi-cart3"></i></a>
+                    <a href=""><i class="bi-bell"></i></a>
+                    <a href=""><i class="bi-list"></i></a>
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
             <div class="right" id="right">
             </div>
         </div>
-        
+
     </div>
 
     <div class="footer">
