--- a/signup.html
+++ b/signup.html
@@ -1,69 +1,102 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>註冊</title>
     <link rel="stylesheet" href="./css/signup.css">
+    <script src="./js/distData.js"></script>
 </head>
-<body>
-<div class="container">
-    <div class="form-header">
-        <h2>註冊</h2>
-    </div>
-    <form class="signup-form">
-        <!-- 每個步驟 -->
-        <div class="form-step active">
-            <div class="form-group">
-                <label for="signup-username">使用者名稱</label>
-                <input type="text" id="signup-username" placeholder="輸入名稱" required>
-                <span class="error-message" style="display: none; color: red; font-size: 14px;"></span>
-            </div>
-            <button type="button" class="next-btn">下一步</button>
-        </div>
-        <div class="form-step">
-            <div class="form-group">
-                <label for="signup-account">使用者帳號</label>
-                <input type="text" id="signup-account" placeholder="輸入帳號" required>
-                <span class="error-message" style="display: none; color: red; font-size: 14px;"></span>
-            </div>
-            <button type="button" class="next-btn">下一步</button>
-        </div>
-        <div class="form-step">
-            <div class="form-group">
-                <label for="signup-password">使用者密碼</label>
-                <input type="password" id="signup-password" placeholder="輸入密碼" required>
-                <span class="error-message" style="display: none; color: red; font-size: 14px;"></span>
-            </div>
-            <button type="button" class="next-btn">下一步</button>
-        </div>
-        <div class="form-step">
-            <div class="form-group">
-                <label for="signup-confirm-password">重複確認密碼</label>
-                <input type="password" id="signup-confirm-password" placeholder="再次輸入密碼" required>
-                <span class="error-message" style="display: none; color: red; font-size: 14px;"></span>
-            </div>
-            <button type="button" class="next-btn">下一步</button>
-        </div>
-        <div class="form-step">
-            <div class="form-group">
-                <label for="signup-email">信箱</label>
-                <input type="email" id="signup-email" placeholder="輸入信箱" required>
-                <span class="error-message" style="display: none; color: red; font-size: 14px;"></span>
-            </div>
-            <button type="button" class="next-btn">下一步</button>
-        </div>
-        <div class="form-step">
-            <div class="form-group">
-                <label for="signup-phone">電話號碼</label>
-                <input type="tel" id="signup-phone" placeholder="輸入電話號碼" required>
-                <span class="error-message" style="display: none; color: red; font-size: 14px;"></span>
-            </div>
-            <button type="submit" class="btn">註冊</button>
-        </div>
-    </form>
-</div>
 
-<script src="./js/signup.js"></script>
+<body>
+    <div class="container">
+        <div class="form-header">
+            <h2>註冊</h2>
+        </div>
+        <form class="signup-form" method="post" action="">
+            <!-- 每個步驟 -->
+            <div class="form-step active">
+                <div class="form-group">
+                    <label for="signup-username">姓名</label>
+                    <input type="text" id="signup-username" name="custuser_name" placeholder="輸入名稱" required>
+                    <span class="error-message" style="display: none; color: red; font-size: 14px;"></span>
+                </div>
+                <button type="button" class="next-btn">下一步</button>
+            </div>
+            <div class="form-step">
+                <div class="form-group">
+                    <label for="signup-email">信箱</label>
+                    <input type="email" id="signup-email" name="custuser_email" placeholder="輸入信箱" required>
+                    <span class="error-message" style="display: none; color: red; font-size: 14px;"></span>
+                </div>
+                <button type="button" class="next-btn">下一步</button>
+            </div>
+            <div class="form-step">
+                <div class="form-group">
+                    <label for="signup-phone">電話號碼</label>
+                    <input type="tel" id="signup-phone" name="custuser_phone" placeholder="輸入電話號碼" required>
+                    <span class="error-message" style="display: none; color: red; font-size: 14px;"></span>
+                </div>
+                <button type="button" class="next-btn">下一步</button>
+            </div>
+            <div class="form-step">
+                <div class="form-group">
+                    <label for="signup-password">使用者密碼</label>
+                    <input type="password" id="signup-password"  placeholder="輸入密碼" required>
+                    <span class="error-message" style="display: none; color: red; font-size: 14px;"></span>
+                </div>
+                <button type="button" class="next-btn">下一步</button>
+            </div>
+            <div class="form-step">
+                <div class="form-group">
+                    <label for="signup-confirm-password">重複確認密碼</label>
+                    <input type="password" id="signup-confirm-password" name="custuser_password" placeholder="再次輸入密碼"
+                        required>
+                    <span class="error-message" style="display: none; color: red; font-size: 14px;"></span>
+                </div>
+                <button type="button" class="next-btn">下一步</button>
+
+            </div>
+            <div class="form-step">
+                <div class="form-group">
+                    <label for="address">常用地址（選填）</label>
+                    <select id="city" name="custuser_city" class="form-select">
+                        <option selected>選擇縣市</option>
+                        <option>臺北市</option>
+                        <option>新北市</option>
+                        <option>桃園市</option>
+                        <option>臺中市</option>
+                        <option>臺南市</option>
+                        <option>高雄市</option>
+                        <option>宜蘭縣</option>
+                        <option>新竹縣</option>
+                        <option>苗栗縣</option>
+                        <option>彰化縣</option>
+                        <option>南投縣</option>
+                        <option>雲林縣</option>
+                        <option>嘉義縣</option>
+                        <option>屏東縣</option>
+                        <option>花蓮縣</option>
+                        <option>臺東縣</option>
+                        <option>澎湖縣</option>
+                        <option>基隆市</option>
+                        <option>新竹市</option>
+                        <option>嘉義市</option>
+                    </select>
+                    <select id="dist" name="custuser_dist" class="form-select">
+                        <option selected></option>
+                      </select>
+                    <input type="tel" id="address" name="custuser_address" placeholder="例：幼獅路二段3號">
+                </div>
+                <button type="submit" class="btn">註冊</button>
+            </div>
+            <div class="form-step">
+            </div>
+        </form>
+    </div>
+
+    <script src="./js/signup.js"></script>
 </body>
+
 </html>
