完成login跟signup的聚焦邏輯、修復signup的下一步與註冊按紐衝突的邏輯、新增按Esc關閉彈出框的功能

--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
         <div class="form-header">
             <h2>註冊</h2>
         </div>
-        <form class="signup-form" method="post" action="">
+        <form class="signup-form" method="post" action="#">
             <!-- 每個步驟 -->
             <div class="form-step active">
                 <div class="form-group">
@@ -89,9 +89,7 @@
                       </select>
                     <input type="tel" id="address" name="custuser_address" placeholder="例：幼獅路二段3號">
                 </div>
-                <button type="submit" class="btn">註冊</button>
-            </div>
-            <div class="form-step">
+                <button type="submit" class="btn" id="submit_button">註冊</button>
             </div>
         </form>
     </div>
