--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div id="login-modal" class="modal">
                     <div class="modal-content">
                         <span class="close-btn">&times;</span>
-                        <iframe id="login-iframe" src="./login.html" frameborder="0" style="width:100%; height:400px;"></iframe>
+                        <iframe id="login-iframe" src="" frameborder="0" style="width:100%; height:400px;"></iframe>
                     </div>
                 </div>
 
