--- a/login.html
+++ b/login.html
@@ -13,8 +13,8 @@
     </div>
     <form>
         <div class="form-group">
-            <label for="login-username">帳號</label>
-            <input type="text" id="login-username" placeholder="輸入帳號">
+            <label for="login-username">信箱或手機號碼</label>
+            <input type="text" id="login-username" placeholder="輸入信箱或手機號碼">
         </div>
         <div class="form-group">
             <label for="login-password">密碼</label>
@@ -33,5 +33,6 @@
     </form>
 </div>
 
+<script src="./js/login.js"></script>
 </body>
 </html>
