整合後端；註冊功能暫結。

--- a/FullDemo/src/main/resources/static/login.html
+++ b/FullDemo/src/main/resources/static/login.html
@@ -11,7 +11,7 @@
     <div class="form-header">
         <h2>登入</h2>
     </div>
-    <form>
+    <form method="post" action="#">
         <div class="form-group">
             <label for="login-username">信箱或手機號碼</label>
             <input type="text" id="login-username" placeholder="輸入信箱或手機號碼">
