--- a/FullDemo/src/main/resources/static/signup.html
+++ b/FullDemo/src/main/resources/static/signup.html
@@ -14,7 +14,7 @@
         <div class="form-header">
             <h2>註冊</h2>
         </div>
-        <form class="signup-form" method="post" action="#">
+        <form class="signup-form" method="post" action="/signup_request">
             <!-- 每個步驟 -->
             <div class="form-step active">
                 <div class="form-group">
