登入成功後修改header內容(登入註冊鈕變成購物車等使用者功能)

--- a/FullDemo/src/main/resources/static/index.html
+++ b/FullDemo/src/main/resources/static/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/animation.css">
     <link rel="stylesheet" href="./css/modal.css">
+    <link rel="stylesheet" href="./css/font/bootstrap-icons.css">
     
 </head>
 
@@ -43,9 +44,10 @@
                 </div>
 
                 <!-- 登入註冊區 -->
-                <div class="log_sign">
-                    <button id="login-btn" type="button" class="login">登入</button>
-                    <button id="signup-btn" type="button" class="signup">註冊</button>
+                <div class="user_function">
+                    <!-- <button id="login-btn" type="button" class="login">登入</button>
+                    <button id="signup-btn" type="button" class="signup">註冊</button> -->
+                   
                 </div>
 
                 <!-- 登入模態框 -->
@@ -64,7 +66,6 @@
                     </div>
                 </div>
             </div>
-            <script src="./js/modal.js"></script>
         </div>
 
         <!-- banner區域 -->
@@ -129,7 +130,7 @@
                             <div class="pic"><img src="./uploads/drink2.jpg" alt=""></div>
                             <div class="txt">
                                 <div class="shopinfo">
-                                    <h4>鮮茶道</h4>
+                                    <h4>鮮茶道 <span style="font-size: 18px;">埔心站前店</span></h4>
                                     <strong>免運</strong>
                                 </div>
                                 <p>營業時間：<span>10:00-22:00</span> | <i class="iconfont material-icons-outlined">
@@ -138,7 +139,7 @@
                             </div>
                         </a>
                         <div class="cover">
-                            <a href="#">
+                            <a href="./menu001.html">
                                 <p>外送門檻</p>
                                 <p>2公里以內200元</p>
                                 <p>3公里以內300元</p>
@@ -434,8 +435,10 @@
         <div class="copyright wrapper">
             copyright © 11302JAVA班第3組
         </div>
-    </div>    
-
+    </div>
+    <script src="./js/jquery-3.7.1.min.js"></script> 
+    <script src="./js/common.js"></script> 
+    <script src="./js/modal.js"></script>    
 </body>
 
 </html>
