--- a/FullDemo/src/main/resources/static/menu001.html
+++ b/FullDemo/src/main/resources/static/menu001.html
@@ -43,9 +43,9 @@
                 </div>
                 <!-- 使用者功能區 -->
                 <div class="user_function">
-                    <a href="./shopcart.html"> <i class="bi-cart3"></i></a>
+                    <!-- <a href="./shopcart.html"> <i class="bi-cart3"></i></a>
                     <a href=""><i class="bi-bell"></i></a>
-                    <a href=""><i class="bi-list"></i></a>
+                    <a href=""><i class="bi-list"></i></a> -->
                 </div>
             </div>
         </div>
@@ -113,7 +113,10 @@
             copyright © 11302JAVA班第3組
         </div>
     </div>
+    <script src="./js/jquery-3.7.1.min.js"></script> 
     <script src="./js/menu001.js"></script>
+    <script src="./js/common.js"></script> 
+    <script src="./js/modal.js"></script> 
 </body>
 
 </html>
