完成點擊首頁店家區塊後，進入該店家menu邏輯，並從後端請求資料渲染menu頁面。

--- a/FullDemo/src/main/resources/static/index.html
+++ b/FullDemo/src/main/resources/static/index.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <!-- logo -->
                 <div class="logo">
-                    <h1><a href="./index.html" onclick="return false">噹菜 T`IAM-TSHAI</a></h1>
+                    <h1><a href="./" onclick="return false">噹菜 T`IAM-TSHAI</a></h1>
                 </div>
 
                 <!-- 搜尋 -->
@@ -46,8 +46,7 @@
                 <!-- 登入註冊區 -->
                 <div class="user_function">
                     <!-- <button id="login-btn" type="button" class="login">登入</button>
-                    <button id="signup-btn" type="button" class="signup">註冊</button> -->
-                   
+                    <button id="signup-btn" type="button" class="signup">註冊</button> -->                   
                 </div>
 
                 <!-- 登入模態框 -->
