--- a/FullDemo/src/main/resources/static/shopcart.html
+++ b/FullDemo/src/main/resources/static/shopcart.html
@@ -37,7 +37,7 @@
                     <div class="line"></div>
                     <i><span class="material-icons-outlined">
                             pin_drop
-                        </span>新增地址</i>
+                        </span>幼獅路二段3號</i>
                 </div>
                 <!-- 使用者功能區 -->
                 <div class="user_function">
