--- a/FullDemo/src/main/resources/static/menu.html
+++ b/FullDemo/src/main/resources/static/menu.html
@@ -118,20 +118,20 @@
                 </div>
                 <div class="selection">
                     <h3>糖度</h3>
-                    <label for="sugar10"><div><input type="radio" id="sugar10" name="sugarLevel" value="10">正常</div></label>
-                    <label for="sugar7"><div><input type="radio" id="sugar7" name="sugarLevel" value="7">少糖</div></label>
-                    <label for="sugar5"><div><input type="radio" id="sugar5" name="sugarLevel" value="5">半糖</div></label>
-                    <label for="sugar3"><div><input type="radio" id="sugar3" name="sugarLevel" value="3" checked>微糖</div></label>
-                    <div><input type="radio" id="sugar0" name="sugarLevel" value="0"><label for="sugar0">無糖</div></label>
+                    <label for="sugar10"><div><input type="radio" id="sugar10" name="sugarLevel" value="正常">正常</div></label>
+                    <label for="sugar7"><div><input type="radio" id="sugar7" name="sugarLevel" value="少糖">少糖</div></label>
+                    <label for="sugar5"><div><input type="radio" id="sugar5" name="sugarLevel" value="半糖" checked>半糖</div></label>
+                    <label for="sugar3"><div><input type="radio" id="sugar3" name="sugarLevel" value="微糖">微糖</div></label>
+                    <label for="sugar0"><div><input type="radio" id="sugar0" name="sugarLevel" value="無糖">無糖</div></label>
                 </div>
                 <div class="selection">
                     <h3>冰量</h3>
-                    <label for="ice10"><div><input type="radio" id="ice10" name="iceLevel" value="10">全冰</div></label>
-                    <label for="ice7"><div><input type="radio" id="ice7" name="iceLevel" value="7">少冰</div></label>
-                    <label for="ice5"><div><input type="radio" id="ice5" name="iceLevel" value="5">半冰</div></label>
-                    <label for="ice3"><div><input type="radio" id="ice3" name="iceLevel" value="3">微冰</div></label>
-                    <label for="ice0"><div><input type="radio" id="ice0" name="iceLevel" value="0">去冰</div></label>
-                    <label for="hot"><div><input type="radio" id="hot" name="iceLevel" value="-10">熱</div></label>
+                    <label for="ice10"><div><input type="radio" id="ice10" name="iceLevel" value="全冰">全冰</div></label>
+                    <label for="ice7"><div><input type="radio" id="ice7" name="iceLevel" value="少冰">少冰</div></label>
+                    <label for="ice5"><div><input type="radio" id="ice5" name="iceLevel" value="半冰" checked>半冰</div></label>
+                    <label for="ice3"><div><input type="radio" id="ice3" name="iceLevel" value="微冰">微冰</div></label>
+                    <label for="ice0"><div><input type="radio" id="ice0" name="iceLevel" value="去冰">去冰</div></label>
+                    <label for="hot"><div><input type="radio" id="hot" name="iceLevel" value="熱">熱</div></label>
                 </div>
                 <div class="remark">
                     <h3>備註</h3>
@@ -142,10 +142,9 @@
                     <input type="text" readonly class="countNumber" value="1">
                     <button class="button-count">+</button>
                 </div>
-                <div class="submitButton">
-                    <button type="button">送出</button>
+                <div class="submitButton" id="submitButton">
+                    <!-- <button type="button">送出</button> -->
                 </div>
-                <!-- <iframe id="orderIframe" src="./order.html" frameborder="0" style="width:100%; height:400px;"></iframe> -->
             </div>
         </div>
 
